<resources>
    <string name="app_name">Tanawar</string>
    <string name="logo">Tanawar Logo</string>
    <string name="usernameTxt">Username Label</string>
    <string name="passwordTxt">Password Label</string>
    <string name="login">Log in</string>
    <string name="forgot_password">Forgot Your Password?</string>
    <string name="register">Register</string>
    <string name="title_activity_register">Register</string>
    <string name="firstname">First Name</string>
    <string name="lastName">Surname</string>
    <string name="title_login">Login</string>
    <string name="email">example@gmail.com</string>
    <string name="password">Password</string>
    <string name="verifyPassword">Verify your password...</string>
    <string name="birthday">Birthday</string>
    <string name="birthdayHint">Select Birthday date</string>
    <string name="phone_number">Phone number</string>
    <string name="submit">Submit</string>
    <string-array name="account_type_spinner">
        <item>Student</item>
        <item>Teacher</item>
        
    </string-array>
    <string name="wrong_value">Wrong Value</string>
    <string name="empty_field">Empty Field</string>
    <string name="email_incorrect">The email format is wrong, email must be like this \'example@gmail.com\'</string>
    <string name="phone_incorrect">The phone number format is wrong,
        make sure the number you pressed is correct .</string>
    <string-array name="register_form_fields_dialog_emptyTest">
        <item>The first name field is empty!</item>
        <item>The surname field is empty!</item>
        <item>The email field is empty!</item>
        <item>The password field is empty!</item>
        <item>The verify password field is empty!</item>
        <item>The birthday field is empty!</item>
        <item>The account type field is empty!</item>
        <item>The phone number field is empty!</item>
    </string-array>
    <string-array name="password_invalid">
        <item>Password Invalid</item>
        <item>The password must contains uppercase letter [A - Z] .</item>
        <item>The password must contains lowercase letter [a - z] .</item>
        <item>The password must contains digit [0 - 9] .</item>
        <item>The password must be at least 8 characters .</item>
        <item>The password and verify password not matched .</item>
    </string-array>
    <string name="title_activity_homepage">Homepage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="profile_username_text">User Full Name</string>
    <string name="txtProfile_myStudents">My Students:</string>
    <string name="txtProfile_recommendMe">Recommend Me:</string>
    <string name="txtProfile_my_achievements">My Achievements:</string>
    <string name="menu_my_activities">My Activities</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_favorites">My Favorites</string>
    <string name="facebook_app_id">267233194275772</string>
    <string name="fb_login_protocol_scheme">fb267233194275772</string>
    <string name="profile_name">Profile Name</string>
    <string name="example_email">example@gmail.com</string>
    <string name="login_continue_to_your_profile">Continue to your profile</string>
    <string name="logout_to_your_profile">Sign out</string>
    <string name="hint_post_title">Post Title</string>
    <string name="post_description">Post Description</string>
    <string name="post_data_link">Post Data Link</string>
    <string name="user_post_owner">Post Owner</string>
    <string name="useful_icon_text">Useful Post</string>
    <string name="share_icon_text">Share Post</string>
    <string name="follow_icon_text">Follow Teacher</string>
    <string name="post_datetime">Post publish date</string>
    <string name="post_time">Post Publish Time</string>
    <string name="hint_video_title">Video Title</string>
    <string name="hint_video_description">Short description for video</string>
    <string name="follows_teacher_profile">Followers</string>
    <string name="rating_teacher_profile">Rating</string>
    <string name="recommendations_teacher_profile">Recommend</string>
    <string name="add_video">Add Video</string>
    <string name="title_activity_teacher__my_videos">Teacher_MyVideos</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_teacher__my_posts">Teacher_MyPosts</string>
    <string name="Category">Category: </string>
    <string name="Language">Language: </string>
    <string name="hint_post_description">Post Description</string>
    <string name="hint_post_data_file">"Source: "</string>
    <string name="hint_post_source">"Source: "</string>
    <string name="posts_tab_search_field">Search words</string>
    <string name="address">Click here to choose Location</string>
    <string name="choose_address">Choose your address by clicking on the
                                                            location on the map.</string>
    <string name="account_type">Account Type</string>
    <string-array name="teacher_materials_categories">
        <item>Mathematics</item>
        <item>Programming</item>
        <item>Languages</item>
        <item>History</item>
        <item>Engineering</item>
        <item>Other</item>
    </string-array>
    <string-array name="categories_array">
        <item>Mathematics</item>
        <item>Biology</item>
        <item>Chemistry</item>
        <item>Physics</item>
        <item>Programming</item>
        <item>Others</item>
    </string-array>
</resources>