<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/white"
    android:layoutDirection="ltr"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="20dp"
            >

            <ImageView
                android:id="@+id/logoImg"
                android:layout_width="250dp"
                android:layout_height="252dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/logo72" />


            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="@color/login_text_color"
                android:hint="Email"
                android:paddingLeft="20dp"
                android:textColor="@color/login_text_color"
                android:textColorHint="@color/login_text_color" />

            <EditText
                android:id="@+id/edtPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="@color/login_text_color"
                android:hint="Password"
                android:paddingLeft="20dp"
                android:textColor="@color/login_text_color"
                android:inputType="textPassword"

                android:textColorHint="@color/login_text_color" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="50dp"
                android:backgroundTintMode="screen"
                android:text="@string/login"
                android:background="@drawable/rounded_button"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:textColor="@color/login_text_color" />

            <TextView
                android:visibility="gone"
                android:id="@+id/forgot_password"
                android:layout_width="180dp"
                android:layout_height="20dp"
                android:text="@string/forgot_password"
                android:textColor="@color/login_text_color"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                />
            <View
                android:layout_width="160dp"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/login_text_color"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                />
            <Button
                android:id="@+id/btnRegister"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:background="@drawable/rounded_button"
                android:text="@string/register"
                android:textAlignment="center"
                android:foreground="?attr/selectableItemBackground"
                android:textColor="@color/login_text_color" />
            <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/userGuideIC"
                    android:src="@drawable/user_guide_ic"
                    />
                <TextView
                    android:layout_marginLeft="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="User Guide"
                    android:id="@+id/userGuideTV"
                    android:fontFamily="Times-New-Roman"
                    android:layout_gravity="center_vertical"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                >
                <ImageView
                    android:visibility="gone"
                    android:id="@+id/facebookIC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/facebook"
                    android:layout_marginRight="30dp"
                    android:layout_gravity="center_horizontal"/>


                <ImageView
                    android:visibility="gone"
                    android:id="@+id/socialGoogleIC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/google"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>


</ScrollView>