<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:background="@color/posts_tab_background"
    android:layoutDirection="ltr"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/post_layout_background"
        app:cardCornerRadius="30dp"
        app:cardElevation="70dp"
        app:cardPreventCornerOverlap="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/post_layout_background"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="left"
                android:layout_marginTop="15dp"
                android:background="@color/post_layout_background"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/post_layout_background"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="Category: "
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:padding="2dp"
                        android:layout_marginLeft="10dp"
                        android:background="@color/post_layout_background"
                        />

                    <TextView
                        android:id="@+id/category"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="@android:color/black"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="40dp"
                        android:layout_marginRight="20dp"
                        android:background="@color/post_layout_background"
                        android:padding="2dp"
                        android:text="category" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/post_layout_background"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="Publish Date: "
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:padding="2dp"
                        android:layout_marginLeft="10dp"
                        android:background="@color/post_layout_background"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="Date"
                        android:textColor="@android:color/black"
                        android:id="@+id/date"
                        android:padding="2dp"
                        android:layout_marginLeft="20dp"
                        android:background="@color/post_layout_background"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/post_layout_background"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="Publish Time: "
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:padding="2dp"
                        android:layout_marginLeft="10dp"
                        android:background="@color/post_layout_background"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="time"
                        android:textColor="@android:color/black"
                        android:id="@+id/time"
                        android:padding="2dp"
                        android:layout_marginLeft="20dp"
                        android:background="@color/post_layout_background"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/post_layout_background"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="Teacher:  "
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:padding="2dp"
                        android:layout_marginLeft="10dp"
                        android:background="@color/post_layout_background"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="Teacher"
                        android:textColor="@android:color/black"
                        android:id="@+id/teacher"
                        android:padding="2dp"
                        android:layout_marginLeft="47dp"
                        android:background="@color/post_layout_background"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/post_layout_background"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/title_post"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:hint="@string/hint_post_title"
                    android:padding="7dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:background="@color/post_layout_background"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/description_post"
                    android:hint="@string/hint_post_description"
                    android:inputType="textMultiLine"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="@android:color/black"
                    android:background="@color/post_layout_background"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/data_source"
                    android:hint="@string/hint_post_source"
                    android:layout_marginTop="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/post_layout_background"
                    android:textStyle="italic"
                    android:textColor="@android:color/holo_blue_dark"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_margin="15dp"
                android:background="@color/post_layout_background"
                >
                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/imageID"
                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>